resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpinfo-demo
  namespace: guoshaobo
spec:
  rules:
  - host: "phpinfo.demo"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: phpinfo-demo
            port:
              number: 80
